# SparkEngine

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/Core/Window/: Window.hpp
src/: CMakeLists.txt  Main.cpp
src/Core/Window/: Window.cpp
